Update dependencies using git
Signed-off-by: Lukasz Pawelczyk <l.pawelczyk@samsung.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ description = "Command line interface for the RSI kernel module"
 
 [dependencies]
 clap = { version = "*", features = ["derive"] }
-rust-rsi = { path = "../../lib/rust-rsi" }
+rust-rsi = { git = "https://github.com/islet-project/rust-rsi" }
 rand = "*"
 
 [profile.release]
